# basal_melt_NEMO

./: README.md  setup.cfg  setup.py
basal_melt_NEMO/: _version.py  constants.py  figure_functions.py  metrics_functions.py  useful_functions.py
notebooks/: 2D_plots_Casimir.ipynb  Reproduce_VALSO_plots_Pierre.ipynb  Reproduce_VALSO_plots_Pierre_2ndtry.ipynb  explore_data_first_steps.ipynb  mask_bottom_shelf.ipynb  play_around_cartopy.ipynb  prepare_cdo_vars.sh  reproduce_Kat_figures.ipynb  transform_VALSO_into_functions.ipynb
notebooks/compare_nemov4_v5/: compare_1D_Christian_Cas.ipynb
notebooks/prepare_forcing_masks/: prepare_masks.ipynb
notebooks/think_about_metrics/: 2D_plots_Casimir.ipynb  Figure_NICO.ipynb  Reproduce_VALSO_plots_Pierre_2ndtry.ipynb  check_lines_on_map.ipynb  reproduce_Kat_figures.ipynb  transform_VALSO_into_functions.ipynb
